1. Added support for update examples from github/gitee 2. Update examples.

--- a/src/libs/utils/utils.qrc
+++ b/src/libs/utils/utils.qrc
@@ -15,5 +15,6 @@
         <file>images/progressindicator_small@2x.png</file>
         <file>images/triangle_vert.png</file>
         <file>tooltip/images/f1.png</file>
+        <file>mimetypes/freedesktop.org.xml</file>
     </qresource>
 </RCC>
